fix overflow-x

--- a/sass/_rest.scss
+++ b/sass/_rest.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 *			{ margin:0; padding:0; border:0;}
 html { font-family:"Microsoft Yahei", "Helvetica Neue", Helvetica, STHeiTi, Arial, sans-serif;  font-size: 62.5%; }
-body		{ margin: 0;font-size: 14px; font-size: 1.4rem; line-height: 1.5; background-color: white; height: 100%; overflow-x: hidden; -webkit-overflow-scrolling: touch;  }
+body		{ margin: 0;font-size: 14px; font-size: 1.4rem; line-height: 1.5; background-color: white; height: 100%;  -webkit-overflow-scrolling: touch;  }
 ol,ul,li	{ list-style-type:none; margin:0; padding:0;}
 a			{ text-decoration:none;}
 i,em,strong,span,address		{ font-style:normal;}
