--- a/sass/index.scss
+++ b/sass/index.scss
@@ -46,6 +46,7 @@ a{
 .wrap-box{
   margin: 0 auto;
   width: 1280px;
+  overflow: hidden;
   background: #ffffff;}
 
 .head{
